--- a/mongodb-docker-compose/docker-compose.yml
+++ b/mongodb-docker-compose/docker-compose.yml
@@ -1,15 +1,14 @@
 version: '3'
-services: 
+services:
   mongodatabase:
     image: mongo
     container_name: my_cloud_mongodb
     environment:
-      - MONGO_INITDB_DATABASE=myidsrvdb
-      - MONGO_INITDB_ROOT_USERNAME=myidsrvdbuser
-      - MONGO_INITDB_ROOT_PASSWORD=myidsrvdbpwd@1234
+      - MONGO_INITDB_DATABASE=mydb
+      - MONGO_INITDB_ROOT_USERNAME=myuser
+      - MONGO_INITDB_ROOT_PASSWORD=mypass
     volumes:
       - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
-      - ./mongo-volume:/var/db/mycloud/mongodb
+      - ./mongo-volume:/var/db/mongodb
     ports:
       - '27017-27019:27017-27019'
-  
